--- a/jikeytang.github.io/slide/26/index.html
+++ b/jikeytang.github.io/slide/26/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <title>test</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
     <style type="text/css">
         *{ margin:0; padding:0;}
         body{font:12px/2 arial; background:#ccc;}
@@ -93,7 +93,7 @@
                 // 初始化方法
                 init: function(opts, me){
                     var that = this,
-                            cache = $.UIDialog.cache;
+                        cache = $.UIDialog.cache;
                     for(var p in opts){ // opts 绑定到 instance
                         this[p] = opts[p];
                     }
@@ -111,10 +111,10 @@
                 // 创建容器
                 createDialog: function(){
                     var that = this,
-                            dialog = $('<div class="ui-dialog"></div>').appendTo(this.body).hide(),
-                            dialogTitle = $('<h1 class="ui-dialog-title"></h1>').appendTo(dialog),
-                            dialogBody = $('<div class="ui-dialog-body"></div>').appendTo(dialog),
-                            titleClose = null;
+                        dialog = $('<div class="ui-dialog"></div>').appendTo(this.body).hide(),
+                        dialogTitle = $('<h1 class="ui-dialog-title"></h1>').appendTo(dialog),
+                        dialogBody = $('<div class="ui-dialog-body"></div>').appendTo(dialog),
+                        titleClose = null;
                     opts.id && dialog.attr('id', opts.id);
                     that.dialog = dialog;
                     that.title ? dialogTitle.append(that.title) : title.hide();
@@ -128,9 +128,9 @@
                 // 创建模板
                 createMask: function(){
                     var that = this,
-                            body = that.body,
-                            windowWidth = that.window.width(),
-                            mask = $('<div class="ui-mask"></div>').appendTo(body).hide();
+                        body = that.body,
+                        windowWidth = that.window.width(),
+                        mask = $('<div class="ui-mask"></div>').appendTo(body).hide();
                     that.mask = mask;
                     mask.css({width: windowWidth, height: that.document.height()});
                     that.IE6 && mask.html('<iframe src="about:blank" style="width:100%;height:100%;position:absolute;top:0;left:0;z-index:-1;filter:alpha(opacity=0)"></iframe>'); // 添加全屏iframe以防止select穿透
@@ -218,12 +218,11 @@
             content: '我是一个兵'
         })
     });
-
     $('#btn').click(function(){
         $.UIDialog({
             content: $(this).next().html()
         });
-    })
+    });
     $('#btn2').UIDialog({
         eventType: 'click',
         content: '我是一个弹出层！'
