--- a/jikeytang.github.io/slide/25/index.html
+++ b/jikeytang.github.io/slide/25/index.html
@@ -7,9 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <!--<script type="text/javascript" src="http://www.cnblogs.com/jquery-1.4.4.min.js"></script>-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
     <!--<script type="text/javascript" src="js/jquery.easing.js"></script>-->
-    <script type="text/javascript" src="http://jquery-swip.googlecode.com/svn/trunk/jquery.easing.1.3.js"></script>
     <!--<script type="text/javascript" src="js/jquery.UISlide2.js"></script>-->
     <style type="text/css">
         *{ margin:0;padding:0;}
