--- a/jikeytang.github.io/slide/27/index.html
+++ b/jikeytang.github.io/slide/27/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <link rel="stylesheet" href="http://files.cnblogs.com/jikey/ui.jkscroll.css" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://files.cnblogs.com/jikey/jquery.jkscroll.js"></script>
     <BGSOUND CEP="0" />
     <BGSOUND CEP="1" />
