--- a/jikeytang.github.io/slide/28/index.html
+++ b/jikeytang.github.io/slide/28/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>test-group-following</title>
     <!-- // <script type="text/javascript" src="../jquery-1.8.3.min.js"></script> -->
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
     <style type="text/css">
         *{margin:0;padding:0;}
         body{font:12px/1.5 arial;background:#fff;}
