--- a/jikeytang.github.io/slide/29/index.html
+++ b/jikeytang.github.io/slide/29/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>随便看看</title>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
     <style type="text/css">
         *{ margin:0; padding:0;}
         body{font:12px/1 arial;background:#fff;}
