--- a/jikeytang.github.io/slide/30/index.html
+++ b/jikeytang.github.io/slide/30/index.html
@@ -22,7 +22,7 @@
         #nav li ul li ul li a{float:none;display:block;}
         .a{border:#ff80c0 solid 2px;width:300px;height:200px;}
     </style>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript">
         $(function(){
             $('#nav li').hover(function(){
