--- a/activity/html/index.html
+++ b/activity/html/index.html
@@ -123,9 +123,9 @@
         <div class="hd_cal">
             <p class="hd_caltil">活动日历</p>
             <p class="hd_cal_nav">
-                <a href="#" class="hd_cal_pre">&lt;&lt;</a>
+                <a href="javascript:;" class="hd_cal_pre">&lt;&lt;</a>
                 <span class="hd_cal_year">2015</span>年 <span class="hd_cal_month">8</span>月
-                <a href="#" class="hd_cal_next">&gt;&gt;</a>
+                <a href="javascript:;" class="hd_cal_next">&gt;&gt;</a>
             </p>
             <table border="0" cellpadding="0" cellspacing="0" class="hd_table">
                 <thead class="hd_thead">
@@ -139,61 +139,7 @@
                     <th>六</th>
                 </tr>
                 </thead>
-                <tbody class="hd_tbody">
-                <tr>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                </tr>
-                <tr>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                </tr>
-                <tr>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                </tr>
-                <tr>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                </tr>
-                <tr>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                </tr>
-                <tr>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
-                </tr>
+                <tbody class="hd_tbody" id="idCalendar">
                 </tbody>
             </table>
             <div class="hd_info">
@@ -202,10 +148,6 @@
                     <span class="hd_info_til">【2015年8月30日，星期日】</span>
                 </p>
                 <ul class="hd_info_list">
-                    <li><a href="#" title="">测试活动列表测试活动列表测试活动列表测试活动列表</a></li>
-                    <li><a href="#" title="">测试活动列表测试活动列表测试活动列表测试活动列表</a></li>
-                    <li><a href="#" title="">测试活动列表测试活动列表</a></li>
-                    <li><a href="#" title="">测试活动列表测试活动列表测试活动列表测试活动列表</a></li>
                 </ul>
             </div>
         </div>
